# vspln-move

./: .gitignore  CMakeLists.txt  LICENSE  README.md  activate_ports.sh  disable_xbox_mouse.sh  notes.txt  package.xml
config/: apriltags.yaml  apriltags_settings.yaml  dokku_arm_joints.yaml  dokku_rviz.rviz  dukku_rviz.rviz  launch_process.txt  mx_arm_joints.yaml  pro_arm_joints.yaml  ps_eye.yaml
config/arm_controllers/: joints.yaml  proarm_control.yaml
launch/: activate_ports.sh  april_tag_test.launch  apriltag_continuous_detection.launch  arduino_control.launch  camera_usb_extra.launch  cameras_extra.launch  dokku_arm_controllers.launch  dokku_real.launch  dokku_real_all.launch  dokku_real_arm_ps_eye.launch  dokku_real_arm_ps_eye_pioneer.launch  dokku_real_only_arm.launch  dokku_real_only_arm_ps_eye.launch  dokku_real_only_uav_apriltags.launch  dokku_real_uav_arm_pseye.launch  dokku_real_uav_arm_pseye_pioneer.launch  dokku_rviz.launch  dokku_simulation.launch  dokku_simulation_only_arm.launch  dynamixel_arm_gazebo_test.launch  dynamixel_arm_gazebotest.launch  mx_arm_controllers.launch  only_ps_eye.launch  only_world.launch  pioneer_arm_ps_eye_real.launch  pioneer_arm_ps_eye_simulation.launch  pro_arm_controller_sdk.launch  pro_arm_controllers.launch  ps_eye_cam.launch  ps_eye_cam_extra.launch  real_arm_ps_eye.launch  real_uav_ps_eye.launch  record_nodes.launch  spawn_quadrotor_mark.launch  summit_pro_arm_gazebo.launch  summit_pro_arm_gazebo_real_ps_eye.launch  usb_cam.launch
launch/old/: all_quad.launch  dynamixel_arm_gazebo.launch  dynamixel_arm_gazebo_and_motors.launch  dynamixel_arm_gazebo_test.launch  summit_xl_arm_gazebo.launch
launch/v0.1/: pioneer_arm.launch  pioneer_arm_ps_eye_only_gazebo.launch  pioneer_arm_ps_eye_real.launch  pioneer_arm_ps_eye_simulation.launch  pioneer_arm_ps_eye_simulation_real_laser.launch  pioneer_only_arm_ps_eye_real.launch  ps_eye.launch  summit_pro_arm_gazebo.launch  summit_pro_arm_gazebo_real_eye.launch  summit_pro_arm_gazebo_real_ps_eye.launch
matlab/: positionsgraph.m
meshes/25h09_0/: .~lock.25h09_0.odt#  25h09_0.odt  model-1_4.sdf  model.config  model.sdf
meshes/25h09_0/meshes/: 25h09_0.dae
meshes/41h12_10/: model-1_4.sdf  model.config  model.sdf
meshes/41h12_10/meshes/: 41h12_10.dae
meshes/dokku_arm/: 50x50x150_scaled.stl  50x50x180_scaled.stl  BracketH42P.stl  FRP42-A110-Support.stl  FRP42-I110KBearing.stl  fr05l_scaled_translated.stl  mx28_scaled.stl  mx641_scaled.stl  mx64_scaled.stl
models/asphalt/materials/scripts/: asphalt.material  cement.material  grass.material
models/building/: Building.stl  Building_dokku.stl  LargeBuilding-v1.1.stl  LargeBuilding-v1.2.blend  LargeBuilding-v1.2.blend1  LargeBuilding-v1.2.stl  big.dae  big_building.dae  building.blend  building.blend1  building.dae  buildingA.dae
models/building/materials/scripts/: building.material
models/woodenfloor/: floormodel.blend  model.config  woodenfloor.blend  woodenfloor.blend1  woodenfloor.dae  woodenfloor1.dae  woodenfloorv1.2.dae
models/woodenfloor/materials/scripts/: woodenfloor.material
results/1/: data_eeff.txt  data_uavrelativepose.txt
results/2/: data_eeff.txt  data_uavrelativepose.txt
results/3/: data_eeff.txt  data_uavrelativepose.txt
results/4/: data_eeff.txt  data_uavrelativepose.txt
results/5/: data_eeff.txt  data_uavrelativepose.txt
results/6/: data_eeff.txt  data_uavrelativepose.txt
results/7/: data_eeff.txt  data_uavrelativepose.txt
results/Experiment/1/: data_eeff_uavrelativepose_v1.txt
results/rrt/1/: data_eeff.txt  data_eeff_advance.txt  data_original_TR.txt  data_rrt_path.txt  data_trajectory.txt
results/rrt/2/: data_eeff_uavrelativepose.txt
results/rrt/3/: data_eeff_uavrelativepose_v1.txt  rrtdata_v1.txt
results/rrt/4/: data_eeff_uavrelativepose_v1.txt  rrtdata_v1.txt
results/rrt/5/: data_eeff_uavrelativepose_v1.txt  rrtdata_v1.txt
results/rrt/6/: data_eeff_uavrelativepose_v1.txt  rrtdata_v1.txt
results/rrt/straightline/4/: data_eeff_uavrelativepose_v1.txt  data_rrt.txt  rrtdata_v1.txt
results/rrt/straightline/5/: data_eeff_uavrelativepose_v1.txt  data_rrt.txt  rrtdata_v1.txt
results/rrt/straightline/6/: data_eeff_uavrelativepose_v1.txt  data_rrt.txt  rrtdata_v1.txt
results/rrt/straightline/7/: data_eeff_uavrelativepose_v1.txt  data_rrt.txt  rrtdata_v1.txt
src/: armbase.h  armfcn.h  movfcns.h  pmov.cpp  rmov_dyn.cpp  rrtfunctions.h  uavarmfcns.h
src/arduino/magnet_motor_joy/: magnet_motor_joy.ino
src/standalone/: MidTermPaper Jan20191.docx  compile.sh  how to run.txt  mains.cpp  prediction.cpp  prediction.hpp  rrt_functionss.cpp  rrt_functionss.hpp  rrt_functionssA.cpp  simm  sincludes.hpp
src/test/: arm_alone.cpp  includes.hpp  main.cpp
src/thread_src/: ed_pmov.cpp  ed_pmov.hpp  includes.hpp  main.cpp  main_only_arm.cpp  main_only_uav_orders.cpp  map_gen.cpp  map_gen.hpp  prediction.cpp  prediction.hpp  rrt_functions (copy).cpp  rrt_functions.cpp  rrt_functions.hpp  trajectory_client.cpp  trajectory_client.hpp  uav_arm_tools.cpp  uav_arm_tools.hpp  uav_ugv_commands.cpp  uav_ugv_commands.hpp
src/thread_src/ik_solver/: ed_pmov.cpp  ed_pmov.hpp
urdf/: camera.urdf.xacro  dynamixel_pro_arm_macro.urdf  ikfast61_pro_arm.cpp  pioneer_with_proarm.urdf.xacro  proarm.urdf  qr_mark.urdf.xacro  quadrotor_base_mark.urdf.xacro  quadrotor_camera.urdf.xacro  quadrotor_mark.gazebo.xacro  quadrotor_mark.urdf.xacro
worlds/: dokku_building.world  dokku_building_textures.world  dokku_test.world  dokku_test1.world  dokku_test2.world  dokku_test3.world  dokku_test_cone.world  dokku_testtruss.world  ocre.world  pioneer_building_obstacles.world  pioneer_building_wheel.world  summit.world  summit_xl.world  wheels  wheelsq
worlds/models/: floorcurvedsample.dae
worlds/models/building/materials/scripts/: woodenfloor.material
worlds/models/woodenfloor/: floormodel.dae  model.sdf  woodenfloor.dae  woodenfloor.stl
worlds/models/woodenfloor/materials/scripts/: woodenfloor.material
worlds/woodenfloor/: woodenfloor.dae  woodenfloor.stl
