<?xml version="1.0"?>
<package>
  <name>ed_pmov</name>
  <version>0.0.0</version>
  <description>The ed_pmov package</description>

   <maintainer email="eduardo@todo.todo">eduardo</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>moveit_core</build_depend>
  <run_depend>moveit_core</run_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>opencv2</build_depend>
  <run_depend>opencv2</run_depend>
  <build_depend>apriltag_ros</build_depend>
  <run_depend>apriltag_ros</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
